--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "eslint": "^5.16.0",
     "sass": "^1.18.0",
     "uglify-es": "^3.3.9"
+  },
+  "dependencies": {
+    "lodash": ">=4.17.13"
   }
 }
